--- a/OfakimTestProject/Views/Data/GetData.cshtml
+++ b/OfakimTestProject/Views/Data/GetData.cshtml
@@ -1,8 +1,7 @@
 ﻿@model List<OfakimTestProject.Models.LogModel>
 
 @{
-    ViewBag.Title = "Ofakim Test Project - Exchange Rates";
-    <script src="~/Scripts/my-angular.js"></script>
+    ViewBag.Title = "Ofakim Test Project - Log Page";
 }
 
 <div>
